# stealth-scraper

./: .gitignore  .test_env.example  CHANGELOG.md  DOCUMENTATION.md  IMPROVEMENTS.md  LICENSE  README.md  __init__.py  debug_env.py  examples.py  pyproject.toml  repro_results.txt  requirements-dev.txt  requirements.txt  stealth_scraper.py  verify_proxy_simple.py
.agent/workflows/: develop_stealth_script.md
docs/: API.md  API_REFERENCE.md  CDP_STEALTH_REPORT.md  CONFIGURATION.md  DOCUMENTATION.md  GUIDE.md  INTERNALS.md  STEALTH_ENGINE.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: examples.py  examples_network_capture.py  examples_stealth_levels.py
stealth_scraper/: __init__.py  browser.py  config.py  stealth_scraper.py
stealth_scraper/proxy/: __init__.py  config.py  extension.py  geo.py  manager.py
stealth_scraper/resources/: cursor.js  stealth.js
stealth_scraper/simulators/: __init__.py  keyboard.py  mouse.py  scroll.py
stealth_scraper/utils/: __init__.py  math.py  network.py  proxy.py
test_results/: test_report.txt
tests/: conftest.py  repro_visual_mouse.py  test_behavior_advanced.py  test_config_overrides.py  test_external_bypass.py  test_features.py  test_fingerprint_consistency.py  test_hardening_suite.py  test_headless_benchmark.py  test_identity_spoofing.py  test_local_mechanics.py  test_mobile_interactions.py  test_mouse_mechanics.py  test_network_capture_suite.py  test_page.html  test_proxy.py  test_proxy_system_suite.py  test_resource_blocking.py  test_stealth_mouse.py  test_suite.py  test_ua_consistency.py  test_wire.py
