[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stealth-scraper"
version = "1.4.0"
description = "Ultimate Stealth Web Scraper Package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Devon Ripley", email = "derippet@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium>=4.15.0",
    "undetected-chromedriver>=3.5.0",
    "fake-useragent>=1.4.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "selenium-stealth>=1.0.6",
    "webdriver-manager>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/devon-ripley/stealth-scraper"

[tool.setuptools]
packages = ["stealth_scraper", "stealth_scraper.simulators", "stealth_scraper.utils", "stealth_scraper.proxy"]

[tool.setuptools.package-data]
"stealth_scraper" = ["resources/*.js"]
